# Computer-Architecture

./: .gitignore  README.md
PA1/: CMakeLists.txt  README.md  build.sh  run.sh  run_all.sh
PA1/docs/: report.md
PA1/include/: bitset.hpp  brute_force_cache.hpp  cache.hpp  replacement_strategy.hpp  trace.hpp  utils.hpp
PA1/logs/: astar.trace_bs_32_ways_-1_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_32_ways_1_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_32_ways_4_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_32_ways_8_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_64_ways_-1_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_64_ways_1_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_64_ways_4_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_64_ways_8_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_8_ways_-1_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_8_ways_4_stra_0_iwa_true_iwb_true.txt  astar.trace_bs_8_ways_8_stra_0_iwa_false_iwb_false.txt  astar.trace_bs_8_ways_8_stra_1_iwa_true_iwb_true.txt  astar.trace_bs_8_ways_8_stra_2_iwa_true_iwb_true.txt  bodytrack_1m.trace_bs_32_ways_1_stra_0_iwa_true_iwb_true.txt  bzip2.trace_bs_32_ways_1_stra_0_iwa_true_iwb_true.txt  bzip2.trace_bs_32_ways_4_stra_0_iwa_true_iwb_true.txt  bzip2.trace_bs_64_ways_-1_stra_0_iwa_true_iwb_true.txt  bzip2.trace_bs_64_ways_1_stra_0_iwa_true_iwb_true.txt  canneal.uniq.trace_bs_32_ways_-1_stra_0_iwa_true_iwb_true.txt  canneal.uniq.trace_bs_64_ways_-1_stra_0_iwa_true_iwb_true.txt  canneal.uniq.trace_bs_64_ways_1_stra_0_iwa_true_iwb_true.txt  log.json  (+67 more)
PA2/: CMakeLists.txt  README.md  build.sh  run.sh  run_all.sh
(+16 files in other folders)
